bonus finished and check_file_extension defined

--- a/p6_So_Long/Makefile
+++ b/p6_So_Long/Makefile
@@ -24,12 +24,32 @@ SRCS = map_elements.c \
     utils.c \
     main.c
 
+BONUS_DIR = bonus
+BONUS_SRCS = $(BONUS_DIR)/map_elements_bonus.c \
+	$(BONUS_DIR)/map_pathfinding_bonus.c \
+	$(BONUS_DIR)/map_validation_bonus.c \
+	$(BONUS_DIR)/get_map_bonus.c \
+	$(BONUS_DIR)/free_utils_bonus.c \
+	$(BONUS_DIR)/init_mlx_bonus.c \
+	$(BONUS_DIR)/init_game_bonus.c \
+	$(BONUS_DIR)/loop_bonus.c \
+	$(BONUS_DIR)/player_bonus.c \
+	$(BONUS_DIR)/render_bonus.c \
+	$(BONUS_DIR)/utils_bonus.c \
+	$(BONUS_DIR)/main_bonus.c
+
 OBJS = $(SRCS:.c=.o)
+BONUS_OBJS = $(BONUS_SRCS:.c=.o)
 
 all: $(NAME)
 
 $(NAME): $(OBJS) $(LIBFT) $(PRINTF) $(GNL) $(MLX)
 	$(CC) $(CFLAGS) $(OBJS) $(LIBFT) $(GNL) $(PRINTF) $(MLX) $(MLXFLAGS) -o $(NAME)
+
+bonus: $(BONUS_DIR)/$(NAME)_bonus
+
+$(BONUS_DIR)/$(NAME)_bonus: $(BONUS_OBJS) $(LIBFT) $(PRINTF) $(GNL) $(MLX)
+	$(CC) $(CFLAGS) $(BONUS_OBJS) $(LIBFT) $(GNL) $(PRINTF) $(MLX) $(MLXFLAGS) -o $(BONUS_DIR)/$(NAME)_bonus
 
 %.o: %.c
 	$(CC) $(CFLAGS) -I $(LIBFTDIR) -I $(PRINTFDIR) -I $(GNLDIR) -I $(MLXDIR) -c $< -o $@
@@ -50,20 +70,23 @@ clean:
 	$(MAKE) clean -C $(GNLDIR)
 	$(MAKE) clean -C $(PRINTFDIR)
 	$(MAKE) clean -C $(LIBFTDIR)
-	$(RM) $(OBJS)
+	$(RM) $(OBJS) $(BONUS_OBJS)
 
 fclean: clean
 	$(MAKE) fclean -C $(GNLDIR)
 	$(MAKE) fclean -C $(PRINTFDIR)
 	$(MAKE) fclean -C $(LIBFTDIR)
 	$(MAKE) clean -C $(MLXDIR)
-	$(RM) $(NAME)
+	$(RM) $(NAME) $(BONUS_DIR)/$(NAME)_bonus
 
 
 re: fclean all
 
 valgrind:
 	valgrind --leak-check=full --track-origins=yes --show-leak-kinds=all --log-file=valgrind_so_long_out.txt ./$(NAME) $(ARGS)
+
+valgrind_bonus:
+	valgrind --leak-check=full --track-origins=yes --show-leak-kinds=all --log-file=valgrind_so_long_out.txt ./$(BONUS_DIR)/$(NAME)_bonus $(ARGS)
 
 get:
 	git clone https://github.com/42Paris/minilibx-linux.git
@@ -74,4 +97,3 @@ norm:
 	$(MAKE) get
 
 .PHONY: all clean fclean re
-
